--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -449,7 +449,6 @@ select {
 
 .number-indicators * {
   cursor: pointer;
-  background: transparent;
   border-radius: 50%;
   width: 2.5em;
   height: 2.5em;
@@ -462,7 +461,7 @@ select {
   border-width: thin;
 }
 
-.number-indicators[aria-selected~="true"] {
+.number-indicators [aria-selected~="true"] {
   color: #0c0e18;
   background-color: white;
 }
@@ -721,7 +720,7 @@ select {
 }
 
 .grid-container--technology picture img {
-  width: 100%;
+  src: url("./assets/technology/image-launch-vehicle-portrait.jpg");
 }
 
 .grid-container--technology .number-indicators {
