--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -522,6 +522,8 @@ select {
   -ms-grid-column: 1;
   grid-area: image;
   max-width: 60%;
+  -ms-flex-item-align: start;
+      align-self: start;
 }
 
 .grid-container--destination .tab-list {
